; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_cb_pcidda.c_cb_pcidda_read_eeprom.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_cb_pcidda.c_cb_pcidda_read_eeprom.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }
%struct.comedi_device = type { i32 }

@SELECT_EEPROM_BIT = common dso_local global i32 0, align 4
@DESELECT_REF_DAC_BIT = common dso_local global i32 0, align 4
@DUMMY_BIT = common dso_local global i32 0, align 4
@devpriv = common dso_local global %struct.TYPE_2__* null, align 8
@DACALIBRATION2 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.comedi_device*, i32)* @cb_pcidda_read_eeprom to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cb_pcidda_read_eeprom(%struct.comedi_device* %0, i32 %1) #0 {
  %3 = alloca %struct.comedi_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.comedi_device* %0, %struct.comedi_device** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 4, i32* %8, align 4
  store i32 6, i32* %9, align 4
  store i32 3, i32* %10, align 4
  store i32 8, i32* %11, align 4
  %12 = load i32, i32* @SELECT_EEPROM_BIT, align 4
  %13 = load i32, i32* @DESELECT_REF_DAC_BIT, align 4
  %14 = or i32 %12, %13
  %15 = load i32, i32* @DUMMY_BIT, align 4
  %16 = or i32 %14, %15
  store i32 %16, i32* %6, align 4
  store i32 0, i32* %5, align 4
  br label %17

17:                                               ; preds = %25, %2
  %18 = load i32, i32* %5, align 4
  %19 = icmp ult i32 %18, 4
  br i1 %19, label %20, label %28

20:                                               ; preds = %17
  %21 = load i32, i32* %5, align 4
  %22 = call i32 @DESELECT_CALDAC_BIT(i32 %21)
  %23 = load i32, i32* %6, align 4
  %24 = or i32 %23, %22
  store i32 %24, i32* %6, align 4
  br label %25

25:                                               ; preds = %20
  %26 = load i32, i32* %5, align 4
  %27 = add i32 %26, 1
  store i32 %27, i32* %5, align 4
  br label %17

28:                                               ; preds = %17
  %29 = load i32, i32* %6, align 4
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** @devpriv, align 8
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = load i64, i64* @DACALIBRATION2, align 8
  %34 = add nsw i64 %32, %33
  %35 = call i32 @outw_p(i32 %29, i64 %34)
  %36 = load %struct.comedi_device*, %struct.comedi_device** %3, align 8
  %37 = call i32 @cb_pcidda_serial_out(%struct.comedi_device* %36, i32 6, i32 3)
  %38 = load %struct.comedi_device*, %struct.comedi_device** %3, align 8
  %39 = load i32, i32* %4, align 4
  %40 = call i32 @cb_pcidda_serial_out(%struct.comedi_device* %38, i32 %39, i32 8)
  %41 = load %struct.comedi_device*, %struct.comedi_device** %3, align 8
  %42 = call i32 @cb_pcidda_serial_in(%struct.comedi_device* %41)
  store i32 %42, i32* %7, align 4
  %43 = load i32, i32* @SELECT_EEPROM_BIT, align 4
  %44 = xor i32 %43, -1
  %45 = load i32, i32* %6, align 4
  %46 = and i32 %45, %44
  store i32 %46, i32* %6, align 4
  %47 = load i32, i32* %6, align 4
  %48 = load %struct.TYPE_2__*, %struct.TYPE_2__** @devpriv, align 8
  %49 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %48, i32 0, i32 0
  %50 = load i64, i64* %49, align 8
  %51 = load i64, i64* @DACALIBRATION2, align 8
  %52 = add nsw i64 %50, %51
  %53 = call i32 @outw_p(i32 %47, i64 %52)
  %54 = load i32, i32* %7, align 4
  ret i32 %54
}

declare dso_local i32 @DESELECT_CALDAC_BIT(i32) #1

declare dso_local i32 @outw_p(i32, i64) #1

declare dso_local i32 @cb_pcidda_serial_out(%struct.comedi_device*, i32, i32) #1

declare dso_local i32 @cb_pcidda_serial_in(%struct.comedi_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
